# homework-26

EX1/: CMakeLists.txt  EX1.cpp  EX1.h
EX2/: CMakeLists.txt  EX2.cpp  EX2.h
EX3/: CMakeLists.txt  EX3.cpp
